--- a/doc/specs/list.tex
+++ b/doc/specs/list.tex
@@ -30,7 +30,7 @@ List can be created with their literal syntax, as shown in
 Return whether all the members of the target verify the given
 predicate.
 
-\begin{urbiscript}
+\begin{urbiscript}[firstnumber=last]
 // Are all elements positive?
 assert(! [-2, 0, 2, 4].all(function (e) { e > 0 }));
 // Are all elements even?
