doc: add package "rotating".
	* doc/urbi-sdk.tex: here.

--- a/doc/urbi-sdk.tex
+++ b/doc/urbi-sdk.tex
@@ -9,6 +9,7 @@
   \usepackage{revision}
 
   \usepackage{config}
+  \usepackage{rotating}
   \newcommand{\uobjectsDir}{\absTopSrcdir/sdk-remote/src/uobjects}
 
 \newcommand{\docurl}{http://www.gostai.com/downloads/urbi-sdk-2.0/doc}
