--- a/doc/specs/formatinfo.tex
+++ b/doc/specs/formatinfo.tex
@@ -1,9 +1,8 @@
 \section{FormatInfo}
 
-A \dfn{format info} is a prototype that corresponds to a formatting
-pattern like those used in printf. It store the formatting pattern
-itself and all the format informations it can extract from the
-pattern.
+A \dfn{format info} is used when formatting a la \code{printf}. It
+store the formatting pattern itself and all the format information it
+can extract from the pattern.
 
 \subsection{Prototypes}
 
@@ -13,7 +12,8 @@ pattern.
 
 \subsection{Construction}
 
-Format info are created for the formatting pattern as a string.
+The constructor expects a string as argument, whose syntax is similar
+to \code{printf}'s.  It is detailed below.
 
 \begin{urbiscript}
 var f = FormatInfo.new("%+2.3d");
@@ -24,28 +24,32 @@ var f = FormatInfo.new("%+2.3d");
 
 A formatting pattern must one of the following (characters that are
 between brackets are optional):
-
 \begin{itemize}
-\item \verb&%&\emph{options} \emph{spec}
-\item \verb&%|&\emph{options}[\emph{spec}]\verb&|&
+\item \verb&%&\var{options} \var{spec}
+\item \verb&%|&\var{options}[\var{spec}]\verb&|&
 \end{itemize}
 
-\emph{options} is flags and may be zero of more of the following:
+\noindent
+\var{options} is flags and may be zero of more of the following:
 \begin{itemize}
 \item \verb&"-"&: Left alignment.
 \item \verb&"="&: Centered alignment.
 \item \verb&"+"&: Show sign even for positive number.
-\item \verb&" "&: If the string does not begin with "+" or "-", insert a space before the converted string.
+\item \verb&" "&: If the string does not begin with "+" or "-", insert
+  a space before the converted string.
 \item \verb&"0"&: Pad with 0's (inserted after sign or base indicator).
 \item \verb&"#"&: Show numerical base, and decimal point.
-\item \verb&"'"&: Splits Thousands ($1000 \rightarrow 1 000$).
+\item \verb&"'"&: Splits thousands (1000 $\rightarrow$ 1 000).
 \end{itemize}
 
-\emph{spec} is the convertion character and may be one of the following:
+\noindent
+\var{spec} is the convertion character and may be one of the following:
 \begin{itemize}
 \item \verb&"s"&: Default character, prints normally.
-\item \verb&"d", "D"&: Case modifier, \verb&"d"& for lowercase and \verb&"D"& for uppercase.
-\item \verb&"x", "X"&: Prints in hexadecimal, \verb&"x"& for lowercase and \verb&"X"& for uppercase.
+\item \verb&"d", "D"&: Case modifier, \verb&"d"& for lowercase and
+  \verb&"D"& for uppercase.
+\item \verb&"x", "X"&: Prints in hexadecimal, \verb&"x"& for lowercase
+  and \verb&"X"& for uppercase.
 \item \verb&"o"&: Prints in octal.
 \item \verb&"b"&: Prints in binary.
 \end{itemize}
