--- a/doc/specs/stdlib.tex
+++ b/doc/specs/stdlib.tex
@@ -15,7 +15,7 @@
 \input{specs/dictionary}
 \input{specs/event}
 \input{specs/float}
-\input{specs/formater}
+\input{specs/formatter}
 \input{specs/formatinfo}
 \input{specs/global}
 \input{specs/group}
